# ddak

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  PROJECT_SPEC.md  README.md  devenv.nix  devenv.yaml
.ddak/: tickets-state.json  tickets.duckdb
.github/workflows/: ci.yml
config/: tao.example.toml
crates/adapter-claudecode/: Cargo.toml
crates/adapter-claudecode/src/: lib.rs
crates/adapter-opencode/: Cargo.toml
crates/adapter-opencode/src/: lib.rs
crates/integration-linear/: Cargo.toml
crates/integration-linear/src/: lib.rs
crates/orchestrator-core/: Cargo.toml
crates/orchestrator-core/src/: adapters.rs  config.rs  diagnostics.rs  events.rs  fanout.rs  lib.rs  projection.rs  resume.rs  secrets.rs  session_bus.rs  session_fsm.rs  worktree.rs
crates/rpc-core/: Cargo.toml
crates/rpc-core/src/: lib.rs
crates/runtime-pty/: Cargo.toml
crates/runtime-pty/src/: lib.rs  reconciliation.rs
crates/store-duckdb/: Cargo.toml
crates/store-duckdb/src/: issue_session_links.rs  lib.rs
crates/terminal-surface/: Cargo.toml
crates/terminal-surface/src/: lib.rs
crates/terminal-surface/test-fixtures/: alt_screen.vt  colors_indexed.vt  colors_rgb.vt  cursor_addressing.vt  sgr_attrs.vt
crates/terminal-surface/tests/: visual_snapshots.rs  vt_snapshots.rs
crates/terminal-surface/tests/snapshots/: visual_snapshots__alt_screen_parsed.snap  visual_snapshots__alt_screen_rendered.snap  visual_snapshots__colors_indexed_parsed.snap  visual_snapshots__colors_indexed_rendered.snap  visual_snapshots__colors_rgb_parsed.snap  (+5 more)
crates/transport-stdio/: Cargo.toml
crates/transport-stdio/src/: lib.rs
crates/tui-app/: Cargo.toml
crates/tui-app/src/: board_poc.rs  main.rs  session_manager.rs
crates/tui-app/test-fixtures/stubs/: colored_output.sh  cursor_draw.sh
crates/tui-app/tests/: render_pipeline.rs  visual_snapshots.rs
crates/tui-app/tests/snapshots/: visual_snapshots__pty_colored_output.snap  visual_snapshots__pty_cursor_addressing.snap
docs/: mcp-tools.md  naming.md  pty-architecture-refactor.md  reliability-slo.md  terminal-compatibility-matrix.md  work-tracking.md
rules/: git-commit-messages.md  rendering-verification.md
scripts/: export_to_markdown_tickets_ddak.py  manual-terminal-compat.sh  migrate_tickets_to_ddak.py  run-slo-checks.sh
