[workspace]
members = [
  "crates/orchestrator-core",
  "crates/runtime-pty",
  "crates/adapter-opencode",
  "crates/adapter-claudecode",
  "crates/store-duckdb",
  "crates/rpc-core",
  "crates/transport-stdio",
  "crates/integration-linear",
  "crates/terminal-surface",
  "crates/tui-app",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
