[package]
name = "orchestrator-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
crossbeam-channel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "0.8"
uuid.workspace = true
vt100 = "0.16"
