[package]
name = "transport-stdio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
rpc-core = { path = "../rpc-core" }
orchestrator-core = { path = "../orchestrator-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
